--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     },
     "dependencies": {
         "gatsby": "^3.7.2",
+        "gatsby-plugin-image": "^1.13.0",
         "gatsby-plugin-react-helmet": "^4.7.1",
         "gatsby-plugin-sass": "^4.10.0",
         "react": "^17.0.2",
