--- a/package.json
+++ b/package.json
@@ -48,10 +48,13 @@
         "webpack-dev-server": "^3.11.2"
     },
     "dependencies": {
+        "@types/markdown-it": "^12.2.1",
         "gatsby": "^3.7.2",
         "gatsby-plugin-image": "^1.13.0",
         "gatsby-plugin-react-helmet": "^4.7.1",
         "gatsby-plugin-sass": "^4.10.0",
+        "highlight.js": "^11.2.0",
+        "markdown-it": "^12.2.0",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-helmet": "^6.1.0",
