--- a/package.json
+++ b/package.json
@@ -53,6 +53,9 @@
         "gatsby-plugin-image": "^1.13.0",
         "gatsby-plugin-react-helmet": "^4.7.1",
         "gatsby-plugin-sass": "^4.10.0",
+        "gatsby-plugin-typegen": "^2.2.4",
+        "gatsby-source-filesystem": "^3.13.0",
+        "gatsby-transformer-csv": "^3.13.0",
         "highlight.js": "^11.2.0",
         "markdown-it": "^12.2.0",
         "react": "^17.0.2",
