--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
         "gatsby-plugin-typegen": "^2.2.4",
         "gatsby-source-filesystem": "^3.13.0",
         "gatsby-transformer-csv": "^3.13.0",
+        "gatsby-transformer-leasot": "^1.3.0",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-helmet": "^6.1.0",
