--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
         "gatsby-plugin-sass": "^4.10.0",
         "gatsby-plugin-typegen": "^2.2.4",
         "gatsby-source-filesystem": "^3.13.0",
-        "gatsby-transformer-csv": "^3.13.0",
+        "gatsby-transformer-excel": "^3.13.0",
         "gatsby-transformer-leasot": "^1.3.0",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
