--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
         "gatsby-source-filesystem": "^3.13.0",
         "gatsby-transformer-excel": "^3.13.0",
         "gatsby-transformer-leasot": "^1.3.0",
+        "gatsby-transformer-remark": "^4.10.0",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-helmet": "^6.1.0",
