--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-helmet": "^6.1.0",
+        "react-icons": "^4.2.0",
         "react-markdown": "^6.0.3",
         "react-router-dom": "^5.2.0",
         "rehype-raw": "^5.1.0",
