--- a/package.json
+++ b/package.json
@@ -55,10 +55,14 @@
         "gatsby-plugin-react-helmet": "^4.7.1",
         "gatsby-plugin-sass": "^4.10.0",
         "gatsby-plugin-typegen": "^2.2.4",
+        "gatsby-remark-images": "^5.10.0",
+        "gatsby-remark-prismjs": "^5.10.0",
+        "gatsby-remark-smartypants": "^4.10.0",
         "gatsby-source-filesystem": "^3.13.0",
         "gatsby-transformer-excel": "^3.13.0",
         "gatsby-transformer-leasot": "^1.3.0",
         "gatsby-transformer-remark": "^4.10.0",
+        "prismjs": "^1.24.1",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-helmet": "^6.1.0",
