--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
         "gatsby-transformer-excel": "^3.13.0",
         "gatsby-transformer-leasot": "^1.3.0",
         "gatsby-transformer-remark": "^4.10.0",
+        "lmdb-store": "^1.6.8",
         "prismjs": "^1.24.1",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
