--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
         "gatsby": "^3.7.2",
         "gatsby-plugin-image": "^1.13.0",
         "gatsby-plugin-react-helmet": "^4.7.1",
+        "gatsby-plugin-react-i18next": "^1.1.1",
         "gatsby-plugin-sass": "^4.10.0",
         "gatsby-plugin-typegen": "^2.2.4",
         "gatsby-remark-images": "^5.10.0",
@@ -62,11 +63,13 @@
         "gatsby-transformer-excel": "^3.13.0",
         "gatsby-transformer-leasot": "^1.3.0",
         "gatsby-transformer-remark": "^4.10.0",
+        "i18next": "^19.9.2",
         "lmdb-store": "^1.6.8",
         "prismjs": "^1.24.1",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-helmet": "^6.1.0",
+        "react-i18next": "^11.12.0",
         "react-icons": "^4.2.0",
         "react-router-dom": "^5.2.0",
         "rehype-raw": "^5.1.0",
