--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
         "react-helmet": "^6.1.0",
         "react-i18next": "^11.12.0",
         "react-icons": "^4.2.0",
+        "react-modal": "^3.14.3",
         "react-modal-video": "^1.2.8",
         "react-router-dom": "^5.2.0",
         "rehype-raw": "^5.1.0",
